# AgentMesh

./: .gitignore  README.md  STRUCTURE_SIMPLE.md  pyproject.toml
agentmesh/: cli.py
agentmesh/bus/: message_bus.py
agentmesh/db/: database.py
agentmesh/memory/: store.py
agentmesh/models/: agent.py  loader.py  message.py
agentmesh/runtime/: agent.py  events.py  llm.py  state_machine.py  supervisor.py
agents/: developer.yaml  reviewer.yaml  tester.yaml
docs/: 00_OVERVIEW.md  01_PRD.md  02_ARCHITECTURE.md  03_SKILL_CATALOG.md  04_API_SPEC.md  05_DATA_MODEL.md  06_DEVELOPMENT_ROADMAP.md  07_RISK_FEASIBILITY.md  08_RESUME.md
tests/: test_agent.py  test_bus.py  test_cli.py  test_llm.py  test_memory.py  test_profile.py  test_state_machine.py  test_supervisor.py
